<resources>
    <string name="app_name">Azkary</string>
    <string name="fadl_el_elm1">قال رسول الله صلى الله عليه وسلم: (إِذَا مَاتَ الإنْسَانُ انْقَطَعَ عنْه عَمَلُهُ إِلَّا مِن ثَلَاثَةٍ: إِلَّا مِن صَدَقَةٍ جَارِيَةٍ، أَوْ عِلْمٍ يُنْتَفَعُ بِهِ، أَوْ وَلَدٍ صَالِحٍ يَدْعُو له).</string>
    <string name="fadl_el_elm2">عن جابر بن عبد الله -رضي الله عنه- قال: قال رسول الله صلّى الله عليه وسلم: (سلُوا اللهَ علمًا نافعًا، وتَعَوَّذُوا باللهِ منْ علمٍ لا ينفعُ).</string>
    <string name="fadl_el_elm3">قال رسول الله صلى الله عليه وسلم: (نضَّرَ اللَّهُ امرأً سمِعَ منَّا حديثًا فحفِظَهُ حتَّى يبلِّغَهُ غيرَهُ، فرُبَّ حاملِ فقهٍ ليسَ بفَقيهٍ، ورُبَّ حاملِ فقهٍ إلى من هوَ أفقَهُ منهُ).</string>
    <string name="fadl_el_elm4">قال رسول الله صلى الله عليه وسلم: (إنْ قامَتِ الساعةُ وفي يدِ أحدِكمْ فَسِيلةٌ، فإنِ استطاعَ أنْ لا تقومَ حتى يَغرِسَها فلْيغرِسْهَا).</string>
    <string name="fadl_el_elm5">قال صلّى الله عليه وسلّم: (لَأَنْ يَحْتَطِبَ أَحَدُكُمْ حُزْمَةً علَى ظَهْرِهِ، خَيْرٌ له مِن أَنْ يَسْأَلَ أَحَدًا فيُعْطِيَهُ أَوْ يَمْنَعَهُ).</string>
    <string name="sadka1">قال النبيّ -عليه الصلاة والسلام-: (ما نَقَصَتْ صَدَقَةٌ مِن مالٍ، وما زادَ اللَّهُ عَبْدًا بعَفْوٍ، إلَّا عِزًّا، وما تَواضَعَ أحَدٌ لِلَّهِ إلَّا رَفَعَهُ اللَّهُ).</string>
    <string name="sadka2">قال رسول الله -صلى الله عليه وسلم-: (ما مِن يَومٍ يُصْبِحُ العِبادُ فِيهِ، إلَّا مَلَكانِ يَنْزِلانِ، فيَقولُ أحَدُهُما: اللَّهُمَّ أعْطِ مُنْفِقًا خَلَفًا، ويقولُ الآخَرُ: اللَّهُمَّ أعْطِ مُمْسِكًا تَلَفًا).</string>
    <string name="sadka3">قال رسول الله -صلى الله عليه وسلم-: (ورَجُلٌ تَصَدَّقَ بصَدَقَةٍ فأخْفاها حتَّى لا تَعْلَمَ يَمِينُهُ ما تُنْفِقُ شِمالُهُ).</string>
    <string name="sadka4">قال النَّبي -صلى الله عليه وسلم-: (كلُّ امرئٍ في ظِلِّ صدقتِه حتَّى يُقضى بينَ النَّاسِ).</string>
    <string name="sadka5">رَوت السيدة عائشة -رضي الله عنها- للرسول -عليه السلام- قصة امرأة آثرت ابنتيها في تمرة عن نفسها، فقال الرسول -عليه الصلاة والسلام-: (إنَّ اللَّهَ قدْ أَوْجَبَ لَهَا بهَا الجَنَّةَ، أَوْ أَعْتَقَهَا بهَا مِنَ النَّارِ).</string>
    <string name="sadka6">قال رسول الله -صلى الله عليه وسلم-: (يَتْبَعُ المَيِّتَ ثَلاثَةٌ، فَيَرْجِعُ اثْنانِ ويَبْقَى واحِدٌ، يَتْبَعُهُ أهْلُهُ ومالُهُ وعَمَلُهُ، فَيَرْجِعُ أهْلُهُ ومالُهُ ويَبْقَى عَمَلُهُ).</string>
    <string name="sapr1">قال النبي صلى الله عليه وسلم: (ما يصيب المؤمن من نصب ولا وصب ولا هم ولا حزن ولا أذى ولا غم حتى الشوكة يشاكها إلا كفر الله بها من خطاياه).</string>
    <string name="sapr2">قال النبي صلى الله عليه وسلم: (من يرد الله به خيرا يصب منه).</string>
    <string name="sapr3">قال النبي صلى الله عليه وسلم: (إن عظم الجزاء مع عظم البلاء وإن الله تعالى إذا أحب قوما ابتلاهم فمن رضي فله الرضا ومن سخط فله السخط).</string>
    <string name="sapr4">قال النبي صلى الله عليه وسلم: (ما يزال البلاء بالمؤمن والمؤمنة في نفسه وولده وماله حتى يلقى الله تعالى وما عليه خطيئة).</string>
    <string name="sapr5">قال النبي صلى الله عليه وسلم: (عجبا لأمر المؤمن إن أمره كله له خير وليس ذلك لأحد إلا للمؤمن إن أصابته سراء شكر فكان خيرا له وإن أصابته ضراء صبر فكان خيرا له).</string>
    <string name="sapr6">قال النبي صلى الله عليه وسلم: (إذا مرض العبد أو سافر كتب له مثل ما كان يعمل مقيما صحيحا).</string>
    <string name="sapr7">قال رسول الله صلى الله عليه وسلم: (ما من عبد تصيبه مصيبة فيقول إنا لله وإنا إليه راجعون اللهم أجرني في مصيبتي واخلف لي خيرا منها إلا أجره الله تعالى في مصيبته وأخلف له خيرا منها).</string>
    <string name="tsamoh1">عن أبي هريرة عن النبي صلى الله عليه وسلم قال: (إيَّاكُم والظَّنَّ، فإنَّ الظَّنَّ أَكذبُ الحديثِ، ولا تحسَّسوا، ولا تجسَّسوا، ولا تحاسَدوا ولا تدابَروا، ولا تباغَضوا، وَكونوا عبادَ اللَّهِ إخوانًا).</string>
    <string name="tsamoh2">عن النعمان بن بشير قال: قال صلى الله عليه وسلم: (مَثلُ المؤمنين في توادِّهم وتراحُمِهم وتعاطُفِهم، مَثلُ الجسدِ. إذا اشتكَى منه عضوٌ، تداعَى له سائرُ الجسدِ بالسَّهرِ والحُمَّى).</string>
    <string name="tsamoh3">عن أبي موسى الأشعري عن النبي صلى الله عليه وسلم قال: (المُؤْمِنُ لِلْمُؤْمِنِ كالْبُنْيانِ، يَشُدُّ بَعْضُهُ بَعْضًا. ثُمَّ شَبَّكَ بيْنَ أصابِعِهِ. وكانَ النَّبيُّ صلَّى اللهُ عليه وسلَّم جالِسًا، إذْ جاءَ رَجُلٌ يَسْأَلُ -أوْ طالِبُ حاجَةٍ- أقْبَلَ عليْنا بوَجْهِهِ، فقالَ: اشْفَعُوا فَلْتُؤْجَرُوا، ولْيَقْضِ اللَّهُ علَى لِسانِ نَبِيِّهِ ما شاءَ).</string>
    <string name="tsamoh4">عن أبي هريرة قال: قال رسول الله صلى الله عليه وسلم: (حَقُّ المُسْلِمِ علَى المُسْلِمِ سِتٌّ قيلَ: ما هُنَّ يا رَسولَ اللهِ؟ قالَ: إذا لَقِيتَهُ فَسَلِّمْ عليه، وإذا دَعاكَ فأجِبْهُ، وإذا اسْتَنْصَحَكَ فانْصَحْ له، وإذا عَطَسَ فَحَمِدَ اللَّهَ فَسَمِّتْهُ، وإذا مَرِضَ فَعُدْهُ وإذا ماتَ فاتَّبِعْهُ).</string>
    <string name="tsamoh5">عن أبي هريرة قال: قال صلى الله عليه وسلم: (لا يفرَكْ مؤمنٌ مؤمنةً، إن كرِهَ منْها خُلقًا رضِيَ منْها آخرَ أو قال: غيرَهُ).</string>
    <string name="tsamoh6">عن جابر بن عبد الله قال: سمعت النبي صلى الله عليه وسلم يقول: (إنَّ الشَّيطانَ قد أيِسَ أن يعبُدَه المصلُّونَ في جزيرةِ العربِ ولَكنْ في التَّحريشِ بينَهم).</string>
    <string name="hegg1">عن أبي هريرة رضي الله عنه قال: (سُئِلَ النبيُّ صلَّى اللهُ عليه وسلَّم: أيُّ الأعمالِ أفضلُ؟ قال: إيمانٌ باللهِ ورسولِه. قِيلَ: ثم ماذا؟ قال جهادٌ في سبيلِ اللهِ. قِيلَ: ثم ماذا؟ قال: حجٌّ مَبرورٌ).</string>
    <string name="hegg2">عَن أبي هُريرة رضي الله عنه، قال: سَمعتُ النبيَّ صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ يقولُ: (مَن حجَّ للهِ، فلم يَرفُث، ولم يَفسُقْ، رجَع كيوم ولدَته أمُّه).</string>
    <string name="hegg3">عَنْ أم المؤمنين عائشة رضي الله عنها قالت: (يا رسولَ اللهِ، نرى الجهادَ أفضلَ العملِ، أفلا نجاهِدُ؟ قال: لا، لكنَّ أفضلَ الجهادِ حجٌّ مبرورٌ).</string>
    <string name="hegg4">قَالَ رَسُولِ اللَّهِ صَلَّى اللَّهُ عَلَيْهِ وَسَلَّم: (العمرةُ إلى العمرةِ كفَّارَةٌ لمَا بينَهمَا، والحجُّ المبرورُ ليسَ لهُ جزاءٌ إلا الجنَّةُ).</string>
    <string name="hegg5">قَالَ رَسُولِ اللَّهِ صَلَّى اللَّهُ عَلَيْهِ وَسَلَّم: (ما من يومٍ أكثرَ من أن يُعتِقَ اللهُ فيهِ عبدًا من النار، من يومِ عرفةَ، وإنَّهُ ليدنو ثم يُباهي بهم الملائكةُ، فيقول: ما أراد هؤلاءِ؟).</string>
    <string name="br_el_waldain1">قال رسول الله صلى الله عليه وسلم: (رَغِمَ أنْفُهُ، ثُمَّ رَغِمَ أنْفُهُ، ثُمَّ رَغِمَ أنْفُهُ قيلَ: مَنْ؟ يا رَسولَ اللهِ، قالَ: مَن أدْرَكَ والِدَيْهِ عِنْدَ الكِبَرِ، أحَدَهُما، أوْ كِلَيْهِما، ثُمَّ لَمْ يَدْخُلِ الجَنَّةَ).</string>
    <string name="br_el_waldain2">قال رسول الله صلى الله عليه وسلم: (رضا الربُّ في رضا الوالدينِ، وسخطُهُ في سخطِهما).</string>
    <string name="br_el_waldain3">سأل عبد الله بن مسعود رسول الله -صلى الله عليه وسلم- عن أحب العمل إلى الله، فقال عليه الصلاة والسلام: (الصَّلَاةُ علَى وقْتِهَا قالَ: ثُمَّ أيٌّ؟ قالَ: برُّ الوَالِدَيْنِ قالَ: ثُمَّ أيٌّ؟ قالَ: الجِهَادُ في سَبيلِ اللَّهِ قالَ: حدَّثَني بهِنَّ، ولَوِ اسْتَزَدْتُهُ لَزَادَنِي).</string>
    <string name="br_el_waldain4">جاء رَجُلٌ إلى رسولِ اللهِ صلَّى اللهُ عليه وسلَّمَ، واستأذَنَه في الجهادِ، فقال له رسول الله صلى الله عليه وسلم: (أحَيٌّ والداكَ؟ قال: نعمْ، قال: ففيهما فجاهِدْ).</string>
    <string name="br_el_waldain5">سأل رجل رسول الله -صلى الله عليه وسلم- فقال: (يا رَسولَ اللَّهِ، مَن أحَقُّ النَّاسِ بحُسْنِ صَحَابَتِي؟ قالَ: أُمُّكَ قالَ: ثُمَّ مَنْ؟ قالَ: ثُمَّ أُمُّكَ قالَ: ثُمَّ مَنْ؟ قالَ: ثُمَّ أُمُّكَ قالَ: ثُمَّ مَنْ؟ قالَ: ثُمَّ أبُوكَ).</string>
    <string name="br_el_waldain6">قال رسول الله صلى الله عليه وسلم: (الوالِدُ أوسطُ أبوابِ الجنَّةِ، فإنَّ شئتَ فأضِع ذلك البابَ أو احفَظْه).</string>
    <string name="br_el_waldain7">قال رسول الله صلى الله عليه وسلم: (مِنَ الكَبائِرِ شَتْمُ الرَّجُلِ والِدَيْهِ قالوا: يا رَسولَ اللهِ، وهلْ يَشْتِمُ الرَّجُلُ والِدَيْهِ؟ قالَ: نَعَمْ يَسُبُّ أبا الرَّجُلِ فَيَسُبُّ أباهُ، ويَسُبُّ أُمَّهُ فَيَسُبُّ أُمَّهُ).</string>
    <string name="br_el_waldain8">قال رسول الله صلى الله عليه وسلم: (أَلَا أُنَبِّئُكُمْ بِأَكْبَرِ الكَبَائِرِ؟ ثَلَاثًا، قالوا: بَلَى يا رَسُولَ اللَّهِ، قالَ: الإشْرَاكُ باللَّهِ، وَعُقُوقُ الوَالِدَيْنِ - وَجَلَسَ وَكانَ مُتَّكِئًا فَقالَ - أَلَا وَقَوْلُ الزُّورِ، قالَ: فَما زَالَ يُكَرِّرُهَا حتَّى قُلْنَا: لَيْتَهُ سَكَتَ).</string>
    <string name="sdek1">روى عبد الله بن مسعود عن الرسول -صلى الله عليه وسلم- أنه قال: (إنَّ الصِّدْقَ يَهْدِي إلى البِرِّ، وإنَّ البِرَّ يَهْدِي إلى الجَنَّةِ، وإنَّ الرَّجُلَ لَيَصْدُقُ حتَّى يَكونَ صِدِّيقًا. وإنَّ الكَذِبَ يَهْدِي إلى الفُجُورِ، وإنَّ الفُجُورَ يَهْدِي إلى النَّارِ، وإنَّ الرَّجُلَ لَيَكْذِبُ حتَّى يُكْتَبَ عِنْدَ اللَّهِ كَذَّابًا).</string>
    <string name="sdek2">روى الحسن بن علي بن أبي طالب عن الرسول -عليه الصلاة والسلام- أنه قال: (دعْ ما يَريبُكَ إلى مَا لا يَريبُكَ فإنَّ الصدقَ طمَأْنِينَةُ والكذِبَ رِيبَةٌ).</string>
    <string name="sdek3">روى سهل ابن حُنَيْفٍ رضي الله عنه: أنَّ النَّبيّ - صلى الله عليه وسلم - قَالَ: (مَنْ سَأَلَ اللهَ تَعَالَى الشَّهَادَةَ بِصِدْقٍ بَلَّغَهُ مَنَازِلَ الشُّهَدَاءِ وَإِنْ مَاتَ عَلَى فِرَاشِهِ).</string>
    <string name="sdek4">عن أبي خالد حَكيمِ بنِ حزامٍ - رضي الله عنه - قَالَ: قَالَ رسولُ الله - صلى الله عليه وسلم: (البَيِّعَانِ بالخِيَار مَا لَمْ يَتَفَرَّقَا، فَإنْ صَدَقا وَبيَّنَا بُوركَ لَهُمَا في بيعِهمَا، وإنْ كَتَمَا وَكَذَبَا مُحِقَتْ بركَةُ بَيعِهِما).</string>
    <string name="twba1">عن أبي هريرة -رضي الله عنه- أنَّ النبي -صلّى الله عليه وسلّم- قال فيما يرويه عن ربِّه: (إنَّ عَبْدًا أصابَ ذَنْبًا - ورُبَّما قالَ أذْنَبَ ذَنْبًا - فقالَ: رَبِّ أذْنَبْتُ - ورُبَّما قالَ: أصَبْتُ - فاغْفِرْ لِي، فقالَ رَبُّهُ: أعَلِمَ عَبْدِي أنَّ له رَبًّا يَغْفِرُ الذَّنْبَ ويَأْخُذُ بهِ؟ غَفَرْتُ لِعَبْدِي، ثُمَّ مَكَثَ ما شاءَ اللَّهُ ثُمَّ أصابَ ذَنْبًا، أوْ أذْنَبَ ذَنْبًا، فقالَ: رَبِّ أذْنَبْتُ - أوْ أصَبْتُ - آخَرَ، فاغْفِرْهُ؟ فقالَ: أعَلِمَ عَبْدِي أنَّ له رَبًّا يَغْفِرُ الذَّنْبَ ويَأْخُذُ بهِ؟ غَفَرْتُ لِعَبْدِي، ثُمَّ مَكَثَ ما شاءَ اللَّهُ، ثُمَّ أذْنَبَ ذَنْبًا، ورُبَّما قالَ: أصابَ ذَنْبًا، قالَ: قالَ: رَبِّ أصَبْتُ - أوْ قالَ أذْنَبْتُ - آخَرَ، فاغْفِرْهُ لِي، فقالَ: أعَلِمَ عَبْدِي أنَّ له رَبًّا يَغْفِرُ الذَّنْبَ ويَأْخُذُ بهِ؟ غَفَرْتُ لِعَبْدِي ثَلاثًا، فَلْيَعْمَلْ ما شاءَ).</string>
    <string name="twba2">روى مسلم عن عبد الله بن عمر، قال: قال رسول الله صلى الله عليه وسلم: (يا أيُّها الناسُ تُوبُوا إلى الله، فإني أتوب في اليوم إليه مائة مرة).</string>
    <string name="twba3">روى مسلم عن أبي هريرة قال: قال رسول الله صلى الله عليه وسلم: (والذي نفسي بيدِهِ، لو لم تُذنِبُوا لذَهَبَ اللهُ بكم، وَلَجَاءَ بقُومٍ يُذنِبون فيستغفِرون اللهَ، فيغْفِر لهم).</string>
    <string name="d10">((لاَ إِلَهَ إِلاَّ اللَّهُ الْعَظِيمُ الْحَلِيمُ، لاَ إِلَهَ إِلاَّ اللَّهُ رَبُّ الْعَرْشِ الْعَظِيمِ، لاَ إِلَهَ إِلاَّ اللَّهُ رَبُّ السَّمَوَاتِ وَرَبُّ الْأَرْضِ وَرَبُّ الْعَرْشِ الْكَرِيمِ))</string>
    <string name="d010">((اللَّهُمَّ رَحْمَتَكَ أَرْجُو، فَلاَ تَكِلْنِي إِلَى نَفْسِي طَرْفَةَ عَيْنٍ، وَأَصْلِحْ لِي شَأْنِي كُلَّهُ، لاَ إِلَهَ إِلاَّ أَنْتَ))</string>
    <string name="d0010">((لاَ إِلَهَ إِلاَّ أَنْتَ سُبْحَانَكَ إِنِّي كُنْتُ مِنَ الظّالِمِينَ))</string>
    <string name="d00010">((اللَّهُ اللَّهُ رَبِّي لاَ أُشْرِكُ بِهِ شَيْئاً))</string>
    <string name="btn_massa">أذكار المساء</string>
    <string name="btn_sabah">أذكار الصباح</string>
    <string name="btn_sleep">أذكار النوم</string>
    <string name="button_prayout">الذكر بعدالصلاه</string>
    <string name="button_musicout">أذكار الخروج من المسجد</string>
    <string name="button_musicin">أذكار الدخول الي المسجد</string>
    <string name="button_azan">أذكارالأذان</string>
    <string name="button_pathin">دعاء الدخول للخلاء</string>
    <string name="button_pathout">دعاءالخروج من الخلاء</string>
    <string name="button_wadoa">الذكر عند الوضوء</string>
    <string name="button_wadoaout">الذكر بعد الفراغ من الوضوء</string>
    <string name="button_homeout">أذكار الخروج من المنزل</string>
    <string name="button_homein">أذكار الدخول الي المنزل</string>
    <string name="button_musicgo">أذكار الذهاب الي المسجد</string>
    <string name="button_cloth">دعاء لبس الثوب</string>
    <string name="button_quran">أدعيه من القران الكريم</string>
    <string name="button_sleepup">أذكار الإستيقاظ من النوم</string>
    <string name="button_breakfast">الدعاء عند افطار الصائم</string>
</resources>