<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/mycolor"
    tools:context=".D9">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/d10"
            style="@style/customstyle"
            android:layout_marginTop="20dp"
            android:background="@drawable/textborder"
            android:textColor="@color/mycolor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <TextView
            android:text="@string/d010"
            style="@style/customstyle"
            android:layout_marginTop="20dp"
            android:background="@drawable/textborder"
            android:textColor="@color/mycolor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <TextView
            android:text="@string/d0010"
            style="@style/customstyle"
            android:layout_marginTop="20dp"
            android:background="@drawable/textborder"
            android:textColor="@color/mycolor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <TextView
            android:text="@string/d00010"
            style="@style/customstyle"
            android:layout_marginTop="20dp"
            android:background="@drawable/textborder"
            android:textColor="@color/mycolor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/m91"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="130dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/play">

            </ImageView>

            <ImageView
                android:id="@+id/m92"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/pause"
                android:layout_width="40dp"
                android:layout_height="40dp">

            </ImageView>

        </LinearLayout>


    </LinearLayout>


</ScrollView>